Add reactor client

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,7 @@ jGitVerVersion=0.9.1
 # Core infrastructure libs versions
 kotlinVersion=1.6.21
 kotlinCoroutinesVersion=1.6.1
+reactorVersion=3.4.17
 springBootVersion=2.6.7
 springCloudVersion=2021.0.2
 ktorVersion=2.0.1
