--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,7 @@ springBootVersion=2.6.7
 springCloudVersion=2021.0.2
 ktorVersion=2.0.1
 logbackVersion=1.2.11
+javaxAnnotationApiVersion=1.3.2
 
 # Testing
 junitPlatformLauncherVersion=1.6.2
