--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,10 @@ ktorVersion=2.0.1
 logbackVersion=1.2.11
 javaxAnnotationApiVersion=1.3.2
 
+# http
+feignVersion=11.9
+jacksonModuleKotlin=2.13.3
+
 # Grpc
 protobufPluginVersion=0.8.18
 ioGrpcVersion=1.16.0
@@ -35,3 +39,4 @@ protobufVersion=3.20.1
 junitPlatformLauncherVersion=1.6.2
 mockkVersion=1.12.3
 springMockkVersion=3.1.1
+wireMockVersion=2.33.2
