--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,7 @@ springCloudVersion=2021.0.2
 ktorVersion=2.0.1
 logbackVersion=1.2.11
 javaxAnnotationApiVersion=1.3.2
+caffeineCacheVersion=2.9.3
 
 # http
 feignVersion=11.9
