--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,7 @@ ktorVersion=2.0.1
 logbackVersion=1.2.11
 javaxAnnotationApiVersion=1.3.2
 caffeineCacheVersion=2.9.3
+slf4jVersion=1.7.36
 
 # http
 feignVersion=11.9
