--- a/gradle.properties
+++ b/gradle.properties
@@ -42,3 +42,7 @@ hamcrestVersion=2.2
 mockkVersion=1.12.3
 springMockkVersion=3.1.1
 wireMockVersion=2.33.2
+
+# Publishing values
+githubUrl=https://github.com/
+gitHubProject=we-node-client
