--- a/gradle.properties
+++ b/gradle.properties
@@ -44,5 +44,5 @@ springMockkVersion=3.1.1
 wireMockVersion=2.33.2
 
 # Publishing values
-githubUrl=https://github.com/
+githubUrl=https://github.com/waves-enterprise/
 gitHubProject=we-node-client
