[WTCH-176] Fix gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,6 +46,8 @@ tests&build:
   extends:
     - .test-gradle
   script:
+    - chmod +x ./we-tx-signer/we-tx-signer-code/lib/start.sh
+    - ./we-tx-signer/we-tx-signer-code/lib/start.sh
     - ./gradlew -PweMavenUser=$MAVEN_USER -PweMavenPassword=$MAVEN_PASSWORD version check build publish
   only:
     - dev
@@ -59,6 +61,8 @@ tests&build_for_maven_central:
     - .test-gradle
   script:
     - cat $we_maven_central_gpg | base64 --decode > "$(pwd)/we_maven_central.gpg"
+    - chmod +x ./we-tx-signer/we-tx-signer-code/lib/start.sh
+    - ./we-tx-signer/we-tx-signer-code/lib/start.sh
     - ./gradlew --no-parallel -PsonaTypeMavenUser=$SONATYPE_USER -PsonaTypeMavenPassword=$SONATYPE_PASSWORD -Psigning.keyId=$SIGN_KEY_ID -Psigning.password=$SIGN_PASSWORD -Psigning.secretKeyRingFile="$(pwd)/we_maven_central.gpg" version check build publish
     - ./gradlew -PsonaTypeMavenUser=$SONATYPE_USER -PsonaTypeMavenPassword=$SONATYPE_PASSWORD closeAndReleaseRepository
   only:
