--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,7 @@ logbackVersion=1.2.11
 javaxAnnotationApiVersion=1.3.2
 caffeineCacheVersion=2.9.3
 slf4jVersion=1.7.36
+bouncycastleVersion=1.70
 cryptoProVersion=5.0.41975
 
 # http
