--- a/gradle.properties
+++ b/gradle.properties
@@ -43,6 +43,7 @@ hamcrestVersion=2.2
 mockkVersion=1.12.3
 springMockkVersion=3.1.1
 wireMockVersion=2.33.2
+kotestVersion=5.0.0
 
 # Publishing values
 githubUrl=https://github.com/waves-enterprise/
