--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,7 @@ code_quality:
     - /^.*hotfix.*$/
 
 tests&build:
+  image: $CI_REGISTRY/integrator/devops/openjdk-17-slim-docker:d837de0d
   extends:
     - .test-gradle
   script:
@@ -55,6 +56,7 @@ tests&build:
   <<: *artifacts
 
 tests&build_for_maven_central:
+  image: $CI_REGISTRY/integrator/devops/openjdk-17-slim-docker:d837de0d
   extends:
     - .test-gradle
   script:
@@ -66,6 +68,7 @@ tests&build_for_maven_central:
   <<: *artifacts
 
 tests-mr:
+  image: $CI_REGISTRY/integrator/devops/openjdk-17-slim-docker:d837de0d
   extends:
     - .test-mr-gradle
   script:
