[WTCH-306] Upgrade io.spring.dependency-management to 1.1.5

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
 # Build plugins
-gradleDependencyManagementVersion=1.0.8.RELEASE
+gradleDependencyManagementVersion=1.1.5
 detektVersion=1.23.6
 ktlintVersion=10.2.1
 gitPropertiesVersion=2.2.2
